--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.6",
+    "chartist": "^1.3.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
@@ -39,7 +41,12 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/multi-word-component-names": 0
+      "vue/multi-word-component-names": 0,
+      "no-undef": "off",
+      "no-useless-escape": "off",
+      "no-prototype-builtins": "off",
+      "no-empty": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
