--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=
 MYSQL_DB=db_inventory
+SECRET_KEY= your_secret_key_here
+UPLOAD_FOLDER=uploads/images/
+ALLOWED_EXTENSIONS=jpg,jpeg,png,gif
+MAX_CONTENT_LENGTH=16777216  # Max 16MB
