--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.6",
     "chartist": "^1.3.0",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.2",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3"
